# netward-standalone

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  SECURITY.md  example_config.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: index.html  styles.css  support.html
netward/: __init__.py  __main__.py  bootstrap.py  capture.py  classify.py  cli.py  mesh.py  mirror.py  operator_layer.py  schema.py  storage.py  test_bootstrap.py  test_buyer_hygiene.py  test_capture.py  test_classify.py  test_integration.py  test_mirror.py  test_operator.py  test_schema.py  test_storage.py  test_vendor_patterns.py
netward/data/: vendor_patterns.json
