[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netward"
version = "0.4.6"
description = "A user-space deception layer that turns DDoS and bot abuse into wasted effort"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dragon Lady" }]
keywords = ["security", "ddos", "bot-mitigation", "deception", "reverse-proxy", "honeypot", "waf"]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pynacl>=1.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dragon-Lady/netward-standalone"
Repository = "https://github.com/Dragon-Lady/netward-standalone"
Issues = "https://github.com/Dragon-Lady/netward-standalone/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-anyio>=0.0.0,<1",
    "pytest-asyncio>=0.24,<2",
    "pytest-timeout>=2.3,<3",
]

[project.scripts]
netward = "netward.__main__:main"
netward-cli = "netward.cli:main"

# Package data ensures data/vendor_patterns.json ships in the wheel so
# first-run auto-seed works without any external download.
[tool.setuptools]
packages = ["netward"]

[tool.setuptools.package-data]
"netward" = ["data/*.json"]

[tool.pytest.ini_options]
# Build artifacts (`build/`, `dist/`, `*.egg-info/`) contain duplicate copies
# of source files; collecting them would double-run every test.
norecursedirs = ["build", "dist", "*.egg-info", ".pytest_cache", "__pycache__"]
